--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/app_color"
     tools:context=".Forgot_password">
 
     <EditText
@@ -29,6 +30,7 @@
         android:layout_marginBottom="296dp"
         android:onClick="open_sign_in"
         android:text="SEND"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
