--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -115,6 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:background="#FFFFFF"
+        android:onClick="open_exercise_tracker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.469"
