--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:background="#FFFFFF"
+        android:onClick="open_nutrition"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.479"
